# gnn-author-influence-prediction

./: .gitignore  README.md  best_gat_model.pth  main.py  pyproject.toml
config/: config.py
data/: load_data.py
services/: __init__.py  author_gat.py  comparison.py  data_load.py  evaluate.py  train.py
