[project]
name = "gnn-author-influence-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gensim>=4.3.2",
    "kagglehub[pandas-datasets]>=0.3.11",
    "lxml>=5.3.1",
    "networkx>=3.4.2",
    "node2vec>=0.5.0",
    "numpy>=1.24.0",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "scipy==1.11.4",
    "torch>=2.6.0",
    "torch-geometric>=2.6.1",
    "transformers>=4.50.3",
]
